# froide-govplan

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
froide_govplan/: __init__.py  admin.py  api_views.py  apps.py  auth.py  cms_apps.py  cms_plugins.py  cms_toolbars.py  conf.py  configuration.py  forms.py  models.py  plan_importer.py  urls.py  utils.py  views.py
froide_govplan/locale/de/LC_MESSAGES/: django.po
froide_govplan/management/commands/: import_govplan.py
froide_govplan/migrations/: 0001_initial.py  0002_auto_20220215_2113.py  0003_auto_20220228_1051.py  0004_auto_20220311_2330.py  0005_governmentplansection.py  0006_sections_cms_plugin.py  0007_auto_20220314_1422.py  0008_governmentplan_proposals.py  0009_governmentplanupdatescmsplugin.py  0010_governmentplanscmsplugin_extra_classes.py  0011_governmentplan_properties.py  0012_government_georegion_alter_government_jurisdiction_and_more.py  0013_government_active.py
froide_govplan/templates/admin/froide_govplan/governmentplan/: change_form.html
froide_govplan/templates/froide_govplan/: base.html  detail.html  plan_og.html  section.html  section_og.html
froide_govplan/templates/froide_govplan/admin/: _proposal.html  accept_proposal.html
froide_govplan/templates/froide_govplan/plugins/: card_cols.html  default.html  progress.html  progress_row.html  search.html  sections.html  time_used.html  updates.html
froide_govplan/templatetags/: govplan.py
project/: settings.py  urls.py
project/templates/: base.html  header.html
project/templates/cms/: page.html
(+1 files in other folders)
