[project]
name = "froide_govplan"
readme = "README.md"
description = ""
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
version = "0.0.1"
dependencies = [
  "django-cms",
  "django-filer",
  "psycopg[binary]",
  "django-admin-sortable2",
  "bleach",
  "django-tinymce",
  "django-oauth-toolkit",
  "django-mfa3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["froide_govplan*"]
